# iGEM-parts-package

./: LICENSE  README.md  pyproject.toml  use_cases.ipynb
src/igem_parts/: __init__.py  bacterial_parts.py
